<resources>
    <string name="personal_data">Личные данные</string>

    <string name="personal_data_fio_hint">ФИО</string>
    <string name="personal_data_date_hint">Дата рождения</string>
    <string name="personal_data_phone_hint">Телефон</string>
    <string name="personal_data_email_hint">Почта</string>
    <string name="personal_data_resend"><u>Отправить повторно</u></string>
    <string name="personal_data_male">Мужской</string>
    <string name="personal_data_female">Женский</string>
    <string name="personal_data_receive_receipts">Получать электронные чеки</string>
    <string name="personal_data_mail_not_valid">Не верный формат почты</string>
    <string name="personal_data_mail_not_ferified">Почта не верифицирована</string>
    <string name="personal_data_account_remove_title">Удаление аккаунта</string>
    <string name="personal_data_account_remove_message">Вы действительно хотите удалить ваш аккаунт? Все ваши данные будут удалены без возможности восстановления.</string>

    <string name="question_remove_title">Почему вы решили удалить ваш аккаунт?</string>
    <string name="question_remove_desc">Пожалуйста, поделитесь с нами причиной, почему вы решили удалить свой аккаунт.</string>
    <string name="question_remove_choice_1">Не пользуюсь сервисом</string>
    <string name="question_remove_choice_2">Высокие цены</string>
    <string name="question_remove_choice_3">Приходит много рекламы</string>
    <string name="question_remove_choice_4">Не нравится качество сервиса</string>
    <string name="question_remove_choice_5">Другое</string>
    <string name="question_remove_choice_own_reason">Своя причина</string>


</resources>