<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.apteka.components.data.models.ConfirmCodeStatus" />

        <variable
            name="viewModel"
            type="ru.apteka.personal_data.presentation.question_remove.QuestionRemoveViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/questionRemoveToolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <ru.apteka.components.ui.LoaderLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isLoading="@{viewModel.isLoading}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/base_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_remove_title"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/question_remove_desc" />

                    <com.google.android.material.card.MaterialCardView
                        style="@style/Theme.Socapteki.BackgroundCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:cardBackgroundColor="@color/light_grey">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp">

                            <RadioButton
                                android:id="@+id/questionRemoveChoice1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.rb1}"
                                android:enabled="@{!viewModel.isPinCodeVisible}"
                                android:text="@string/question_remove_choice_1" />

                            <RadioButton
                                android:id="@+id/questionRemoveChoice2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.rb2}"
                                android:enabled="@{!viewModel.isPinCodeVisible}"
                                android:text="@string/question_remove_choice_2" />

                            <RadioButton
                                android:id="@+id/questionRemoveChoice3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.rb3}"
                                android:enabled="@{!viewModel.isPinCodeVisible}"
                                android:text="@string/question_remove_choice_3" />

                            <RadioButton
                                android:id="@+id/questionRemoveChoice4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.rb4}"
                                android:enabled="@{!viewModel.isPinCodeVisible}"
                                android:text="@string/question_remove_choice_4" />

                            <RadioButton
                                android:id="@+id/questionRemoveChoice5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.rb5}"
                                android:enabled="@{!viewModel.isPinCodeVisible}"
                                android:text="@string/question_remove_choice_5" />

                        </RadioGroup>

                    </com.google.android.material.card.MaterialCardView>

                    <!-- Своя причина -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/edit_text_shape"
                        android:enabled="@{!viewModel.isPinCodeVisible}"
                        android:gravity="top"
                        android:hint="@string/question_remove_choice_own_reason"
                        android:padding="16dp"
                        android:text="@={viewModel.ownReason}"
                        app:visibleIf="@{viewModel.rb5}" />

                    <!-- Поле ввода пинкода -->
                    <ru.apteka.components.ui.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:enabled="@{!viewModel.isLoading}"
                        android:hint="@string/confirm_code_hint"
                        app:errorText="@{viewModel.confirmCodeStatus == ConfirmCodeStatus.ERROR ? @string/confirm_code_error : ``}"
                        app:visibleIf="@{viewModel.isPinCodeVisible}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etQuestionRemoveConfirmCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_input_white_background_unfocused_shape"
                            android:digits=" ,_0,1,2,3,4,5,6,7,8,9"
                            android:inputType="number"
                            android:text="@={viewModel.code}" />

                    </ru.apteka.components.ui.TextInputLayout>

                    <!-- Отпраить код повторно -->
                    <include
                        layout="@layout/code_did_not_come"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:leftTime="@{viewModel.leftTime}"
                        app:onClick="@{viewModel.onNewCode}"
                        app:visibleIf="@{viewModel.isPinCodeVisible}" />

                    <!-- Кнопки -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/questionRemoveCancelButton"
                            style="@style/Theme.Socapteki.OutlinedButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:text="@string/cancel" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/questionRemoveConfirmButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:enabled="@{viewModel.removeBtnEnabled}"
                            android:onClick="@{(view) -> viewModel.onNewCode.invoke(view)}"
                            android:text="@string/remove" />

                    </LinearLayout>

                </LinearLayout>

            </ru.apteka.components.ui.LoaderLayout>

        </ScrollView>

    </LinearLayout>

</layout>