<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.apteka.personal_data.presentation.personal_data.PersonalDataViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/personalDataToolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <ru.apteka.components.ui.LoaderLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isLoading="@{viewModel.isLoading}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- ФИО -->
                    <ru.apteka.components.ui.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/base_padding"
                        android:layout_marginTop="16dp"
                        android:enabled="@{!viewModel.isLoading}"
                        android:hint="@string/personal_data_fio_hint"
                        app:startIconDrawable="@drawable/ic_fio">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPersonalDataFio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_input_white_background_unfocused_shape"
                            android:text="@={viewModel.fio}" />

                    </ru.apteka.components.ui.TextInputLayout>

                    <!-- Дата рождения -->
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/base_padding"
                        android:layout_marginTop="16dp">

                        <ru.apteka.components.ui.TextInputLayout
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{!viewModel.isLoading}"
                            android:hint="@string/personal_data_date_hint"
                            app:endIconDrawable="@drawable/ic_date_drop"
                            app:endIconMode="custom"
                            app:startIconDrawable="@drawable/ic_date">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPersonalDataDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_input_white_background_unfocused_shape"
                                android:digits=" .,_0,1,2,3,4,5,6,7,8,9"
                                android:inputType="number"
                                android:text="@={viewModel.date}" />

                        </ru.apteka.components.ui.TextInputLayout>

                        <View
                            android:id="@+id/vPersonalDataDate"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:background="@android:color/transparent" />

                    </FrameLayout>

                    <!-- Телефон -->
                    <ru.apteka.components.ui.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/base_padding"
                        android:layout_marginTop="16dp"
                        android:enabled="@{!viewModel.isLoading}"
                        android:hint="@string/personal_data_phone_hint"
                        app:startIconDrawable="@drawable/ic_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPersonalDataPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_input_white_background_unfocused_shape"
                            android:inputType="phone"
                            android:text="@={viewModel.phone}" />

                    </ru.apteka.components.ui.TextInputLayout>

                    <!-- Емайл -->
                    <ru.apteka.components.ui.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/base_padding"
                        android:layout_marginTop="16dp"
                        android:enabled="@{!viewModel.isLoading}"
                        android:hint="@string/personal_data_email_hint"
                        app:errorText="@{viewModel.emailVerifiedAndValid == null ? `` : context.getString(viewModel.emailVerifiedAndValid)}"
                        app:startIconDrawable="@drawable/ic_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPersonalEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_input_white_background_unfocused_shape"
                            android:text="@={viewModel.email}" />

                    </ru.apteka.components.ui.TextInputLayout>

                    <!-- Отправить повторно -->
                    <include
                        layout="@layout/code_did_not_come"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        app:leftTime="@{viewModel.leftTime}"
                        app:onClick="@{viewModel.onNewCode}" />

                    <!-- Выбрать пол -->
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_button_background_shape"
                            android:checked="@={viewModel.male}"
                            android:enabled="@{!viewModel.isLoading}"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingEnd="8dp"
                            android:text="@string/personal_data_male" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/radio_button_background_shape"
                            android:checked="@={viewModel.female}"
                            android:enabled="@{!viewModel.isLoading}"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingEnd="8dp"
                            android:text="@string/personal_data_female" />

                    </RadioGroup>

                    <!-- Получать чеки -->
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        android:checked="@={viewModel.isReceiveReceipts}"
                        android:enabled="@{!viewModel.isLoading}"
                        android:text="@string/personal_data_receive_receipts" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <!-- Сохранить -->
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:enabled="@{viewModel.isChanged}"
                        android:onClick="@{() -> viewModel.savePersonalData()}"
                        android:text="@string/save" />

                </LinearLayout>

            </ru.apteka.components.ui.LoaderLayout>

        </ScrollView>

    </LinearLayout>

</layout>